@@ -1,6 +1,9 @@
 [0.9.3] - Fixed the new user account form not returning the users firstname or last name when an
 	      error is reported.
 		- Fixed NNTP to handle new VFS api.
+		- Fixed a number of preferences bugs on the main screen.
+		- Fixed E-Mail sigs not being added.
+		- Moved E-Mail preferences into its own section.
 
 [0.9.2] - Fixed sorting bug in currentusers.php
 		- Cleaned up error reporting and form in newaccount.php
